modificaciones en index y subida de styles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>25Watts</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><img src="./assets/image/top-logo.svg" alt=""></li>
+            <ul class="header__nav__ul">
+                <li><img src="assets/image/top-logo.svg" alt="logo 25Watts"></li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#product">Product</a></li>
@@ -28,16 +29,40 @@
         </section>
         
         <section id="about">
-            <h1>We help businesses</h1>
-            <h1>Grow and innovate</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed mollitia, doloribus iste quaerat corporis exercitationem quibusdam culpa. Nobis perspiciatis est dolor consequuntur inventore! Sit quas, amet dolor quaerat nostrum harum?</p>
+            <h2>We Help Businesses</h2>
+            <h2>Grow and Innovate</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
+                invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
+                accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata 
+                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing 
+                elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita 
+                kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor 
+                sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+            </p>
         </section>
 
         <section id="product">
-            <img src="" alt="">
-            <p>sed ut perspiciatis</p>
-            <h2>Nemo Enim</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam repellat, magni placeat porro tenetur nobis!</p>
+            <div id="product_container">
+                <div id="product_element">
+                    <div id="product_img">
+                        <div id="product_txt">
+                            <div id="h4_product">
+                                <h4 >Sed ut perspiciatis</h4>
+                            </div>
+                            <div id="h2_product">
+                                <h2>Nemo Enim</h2>
+                            </div>
+                            <div id="p_product">
+                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                            </div>
+                            <img src="./assets/image/Icon feather-arrow-left-circle.svg" alt="feather-arrow-left-circle">
+                            <img src="./assets/image/Icon feather-arrow-right-circle.svg" alt="feather-arrow-right-circle">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section id="service">
